# Nerv

./: .gitignore  Cargo.toml  LICENSE  README.md  clocignore.sh  rustfmt.toml  setup_llvm.sh
.github/workflows/: release.yml
examples/: argv.nerv  chan_pool.nerv  example.nerv  heavy.nerv  mod_a.nerv  pretty_error.nerv  showcase.nerv  stdlib_demo.nerv  thread.nerv  with_imports.nerv
rules/: Ruleset.md
src/: ast.rs  codegen.rs  diagnostics.rs  lexer.rs  main.rs  module_resolver.rs  parser.rs  runtime.rs  stdlib.rs
