[package]
name = "nerv"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.12.0"
inkwell = { version = "0.1.1", features = ["llvm14-0"] }
llvm-sys = "140.0.1"
ureq = { version = "2", features = ["json", "tls", "charset"] }
tungstenite = { version = "0.20", features = ["native-tls"] }
once_cell = "1"
libc = "0.2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
