[package]
name = "nerv"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/NPSummers/nerv"
description = "Nerv language interpreter/JIT (alpha)"
readme = "README.md"

[dependencies]
logos = "0.12.0"
inkwell = { version = "0.1.1", features = ["llvm14-0"] }
llvm-sys = "140.0.1"
ureq = { version = "2", features = ["json", "tls", "charset"] }
tungstenite = { version = "0.20", features = ["native-tls"] }
once_cell = "1"
libc = "0.2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "std"] }
regex = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
url = "2.5"
urlencoding = "2.1"
